--- a/SuperWeb/index.html
+++ b/SuperWeb/index.html
@@ -42,7 +42,7 @@
       </svg>
     </div>
     <div id="main">
-      <div id="page1" data-scroll data-scroll-speed="-2">
+      <div id="page1" data-scroll data-scroll-speed="-2.5">
         <h1>
           CREATIVE PROFESSIONAL <br />
           <em>DEDIDCATED</em> TO CULTURAL <br />
@@ -50,7 +50,138 @@
           <em>STRATEGY</em> AND <em>DESIGN</em>
         </h1>
       </div>
-      <div id="page2" data-scroll data-scroll-speed="1"></div>
+      <div id="page2" data-scroll data-scroll-speed="1">
+        <div id="elem" data-img="">
+          <h2>Converse</h2>
+          <div class="moving">
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+          </div>
+        </div>
+        <div id="elem" data-img="">
+          <h2>Nikenfl</h2>
+          <div class="moving">
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+          </div>
+        </div>
+        <div id="elem" data-img="">
+          <h2>Mineral</h2>
+          <div class="moving">
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+          </div>
+        </div>
+        <div id="elem" data-img="">
+          <h2>Futureworld</h2>
+          <div class="moving">
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+          </div>
+        </div>
+        <div id="elem" data-img="">
+          <h2>Beyonce</h2>
+          <div class="moving">
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+              <div class="moving-in">
+                <h5>Creative direction</h5>
+                <h5>Digital Design</h5>
+                <h5>Art Direction</h5>
+                <h5>Branding and Identity</h5>
+                <h5>Type design</h5>
+              </div>
+          </div>
+        </div>
+      </div>
       <div id="page3" data-scroll></div>
     </div>
 
