--- a/SuperWeb/index.html
+++ b/SuperWeb/index.html
@@ -51,9 +51,10 @@
         </h1>
       </div>
       <div id="page2" data-scroll data-scroll-speed="1">
-        <div id="elem" data-img="">
+        <div id="elem" data-img="https://works.studio/assets/imager/images/converse-global-creative/31908/00-Hero_66386012852979bf6f60b2d90a344eff.jpg">
           <h2>Converse</h2>
           <div class="moving">
+            <div class="blur"></div>
               <div class="moving-in">
                 <h5>Creative direction</h5>
                 <h5>Digital Design</h5>
@@ -77,9 +78,10 @@
               </div>
           </div>
         </div>
-        <div id="elem" data-img="">
+        <div id="elem" data-img="https://works.studio/assets/imager/images/nike-nfl-2022/22033/nike-nfl-2022-campaign-dallas-cowboys-portrait-photography_66386012852979bf6f60b2d90a344eff.jpg">
           <h2>Nikenfl</h2>
           <div class="moving">
+            <div class="blur"></div>
               <div class="moving-in">
                 <h5>Creative direction</h5>
                 <h5>Digital Design</h5>
@@ -103,9 +105,10 @@
               </div>
           </div>
         </div>
-        <div id="elem" data-img="">
+        <div id="elem" data-img="https://works.studio/assets/imager/images/mineral-health/3231/Mineral-Direction-Brand-Identity-Photography-Still-Life-01_WORKS_66386012852979bf6f60b2d90a344eff.jpg">
           <h2>Mineral</h2>
           <div class="moving">
+            <div class="blur"></div>
               <div class="moving-in">
                 <h5>Creative direction</h5>
                 <h5>Digital Design</h5>
@@ -129,9 +132,10 @@
               </div>
           </div>
         </div>
-        <div id="elem" data-img="">
+        <div id="elem" data-img="https://works.studio/assets/imager/images/futurevvorld/17915/FUTUREVVORLD-Brand-Identity-Photography-Gallery_WORKS_66386012852979bf6f60b2d90a344eff.jpg">
           <h2>Futureworld</h2>
           <div class="moving">
+            <div class="blur"></div>
               <div class="moving-in">
                 <h5>Creative direction</h5>
                 <h5>Digital Design</h5>
@@ -155,9 +159,10 @@
               </div>
           </div>
         </div>
-        <div id="elem" data-img="">
+        <div id="elem" data-img="https://works.studio/assets/imager/images/the-lion-king-the-gift/8572/Beyonce-Lion-King-The-Gift-Deluxe-Album-Cover_WORKS_66386012852979bf6f60b2d90a344eff.jpg">
           <h2>Beyonce</h2>
           <div class="moving">
+            <div class="blur"></div>
               <div class="moving-in">
                 <h5>Creative direction</h5>
                 <h5>Digital Design</h5>
