--- a/SuperWeb/index.html
+++ b/SuperWeb/index.html
@@ -50,7 +50,7 @@
           <em>STRATEGY</em> AND <em>DESIGN</em>
         </h1>
       </div>
-      <div id="page2" data-scroll data-scroll-speed="1">
+      <div id="page2" data-scroll data-scroll-speed="0">
         <div id="elem" data-img="https://works.studio/assets/imager/images/converse-global-creative/31908/00-Hero_66386012852979bf6f60b2d90a344eff.jpg">
           <h2>Converse</h2>
           <div class="moving">
@@ -187,7 +187,93 @@
           </div>
         </div>
       </div>
-      <div id="page3" data-scroll></div>
+      <div id="page3" data-scroll>
+        <div class="img-container">
+          <div class="line">
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/converse-nextstudio/35375/Cover_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/john-elliott-nepal/26169/21_john-elliott-nepal_WORKS_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/jeen-yuhs/13608/jeen-yuhs-Film-Identity-Thumbnail_WORKS_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/boldly/25589/boldly-thumbnail_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+          </div>
+          <div class="line">
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/converse-nextstudio/35375/Cover_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/john-elliott-nepal/26169/21_john-elliott-nepal_WORKS_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/jeen-yuhs/13608/jeen-yuhs-Film-Identity-Thumbnail_WORKS_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/boldly/25589/boldly-thumbnail_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+          </div>
+          <div class="line">
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/converse-nextstudio/35375/Cover_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/john-elliott-nepal/26169/21_john-elliott-nepal_WORKS_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/jeen-yuhs/13608/jeen-yuhs-Film-Identity-Thumbnail_WORKS_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+            <div class="image-div">
+              <div class="overlay">
+                <p>Chikago BlackHawks <em>BEST day ever</em></p>
+              </div>
+              <img src="https://works.studio/assets/imager/images/boldly/25589/boldly-thumbnail_e49f8295ccc5a85e1a76e2d68c06456f.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="footer">
+        <h2>Back to top</h2>
+        <div id="foot"></div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
