--- a/obysClone/index.html
+++ b/obysClone/index.html
@@ -22,6 +22,11 @@
             <h1>is loading right</h1>
             <h2>Now</h2>
         </div>
+        <div class="line">
+            <h4>
+                please wait...
+            </h4>
+        </div>
     </div>
     <div id="main">
         <div id="page1"></div>
