--- a/obysClone/index.html
+++ b/obysClone/index.html
@@ -53,16 +53,19 @@
                     <h4>Contact</h4>
                 </div>
             </div>
-            <div class="hero">
+            <div class="hero" id="hero1">
                 <h1>We Design</h1>
             </div>
-            <div class="hero">
+            <div class="hero" id="hero2">
                 <h1>Unique</h1>
             </div>
-            <div class="hero">
-                <h1>Web/Graphic</h1>
+            <div class="hero" id="hero3">
+                <h1>
+                    <h2>Web /</h2>
+                    <h2>Graphics</h2>
+                </h1>
             </div>
-            <div class="hero">
+            <div class="hero" id="hero4">
                 <h1>Experience</h1>
             </div>
         </div>
